defconfig: add j4fs and modules

--- a/arch/arm/configs/cyanogenmod_skomer_defconfig
+++ b/arch/arm/configs/cyanogenmod_skomer_defconfig
@@ -415,6 +415,8 @@ CONFIG_U8500_SHRM=y
 CONFIG_U8500_SHRM_SVNET=y
 CONFIG_U8500_SHRM_MODEM_SILENT_RESET=y
 CONFIG_SAMSUNG_PARAM=m
+CONFIG_SAMSUNG_MODULES=m
+CONFIG_J4FS=m
 CONFIG_STARTUP_REASON=y
 CONFIG_AB8500_STARTUP_REASON=y
 CONFIG_NEW_SENSORS=y
