--- a/arch/arm/configs/cyanogenmod_skomer_defconfig
+++ b/arch/arm/configs/cyanogenmod_skomer_defconfig
@@ -489,6 +489,11 @@ CONFIG_CRYPTO_DEV_UX500_HASH=y
 CONFIG_CRC7=y
 CONFIG_AVERAGE=y
 
+#BLN
+CONFIG_GENERIC_BLN=y
+# CONFIG_GENERIC_BLN_EMULATE_BUTTONS_LED is not set
+# CONFIG_GENERIC_BLN_USE_WAKELOCK is not set
+
 #Selinux
 #########################
 CONFIG_AUDIT=y
